# RiftboundDeckExaminer

./: .gitignore  README.md  pyproject.toml
src/riftbounddeckanalyzer/analyzers/: deck_analyzer.py
src/riftbounddeckanalyzer/data/analyzer/: fiora.json  leblanc.json
src/riftbounddeckanalyzer/data/decklists/fiora/: 3rd at S3 Chongqing City Challenge.txt  5th at S3 Beijing City Challenge.txt  9th at S3 Shenyang City Challenge.txt
src/riftbounddeckanalyzer/data/decklists/leblanc/: 13th at S3 Beijing City Challenge.txt  5th at S3 Shenzhen City Challenge.txt
src/riftbounddeckanalyzer/decks/: deck.py
src/riftbounddeckanalyzer/readers/: deck_reader.py
src/riftbounddeckanalyzer/readers/utils/: util.py
src/riftbounddeckexaminer/data/analyzer/: fiora.json  leblanc.json
src/riftbounddeckexaminer/data/decklists/fiora/: 11th at S3 Shenyang City Challenge.txt  13th at S3 Fuzhou City Challenge.txt  17th at S3 Shanghai City Challenge.txt  1st at S3 Beijing City Challenge.txt  3rd at S3 Beijing City Challenge.txt
src/riftbounddeckexaminer/data/decklists/leblanc/: 10th at S3 Beijing City Challenge.txt  10th at S3 Guangzhou City Challenge.txt  (+9 more)
src/riftbounddeckexaminer/examiners/: examiner_manager.py
src/riftbounddeckexaminer/examiners/analyzers/: analyzer_result.py  deck_analyzer.py  placement_analyzer.py
src/riftbounddeckexaminer/examiners/readers/: deck_reader.py  decklist_metadata.py  riftdecks_deck_reader.py  terminal_deck_reader.py
src/riftbounddeckexaminer/riftbound/: deck.py  metagame.py
src/riftbounddeckexaminer/utils/: indexed_str_enum.py  util.py
