[project]
name = "riftbounddeckexaminer"
version = "0.1.0"
description = ""
authors = [
    {name = "Vincent Jiang",email = "vincejiang1996@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "lxml (>=6.1.0,<7.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "cloudscraper (>=1.2.71,<2.0.0)",
    "httpx[http2] (>=0.28.1,<0.29.0)",
    "selenium (>=4.43.0,<5.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "seleniumbase (>=4.48.4,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
read-decks = "riftbounddeckexaminer.examiners.examiner_manager:main_function"

[tool.black]
skip-magic-trailing-comma = true